# add some style # add vendor resource

--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<html>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<html lang="en">
     <head>
-        <title>
-            Beauty CSS
-        </title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="vendor/css/grid.css">
+        <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic' rel='stylesheet' type='text/css'>
+        <title>Omnifood</title>
     </head>
     <body>
-        <h2>First Post</h2>
-        <span>22 Juni 2016</span>
-        <p>
-            In excepteur ab appellat quo expetendis distinguantur si appellat. Ex summis qui 
-            labore, culpa id qui malis appellat, veniam cupidatat aut quid magna ex o et 
-            efflorescere. Nescius summis ad commodo graviterque, summis non offendit. Non 
-            expetendis an probant, ad mentitum et quamquam eu dolor probant fidelissimae, id 
-            quamquam efflorescere, singulis sunt ipsum de fore iis est duis irure malis 
-            voluptate, ubi fore anim ipsum commodo, arbitror ipsum quamquam. 
-        </p>
+       <div class="row">
+            <h1>Omnifood</h1>
+       </div>
     </body>
 </html>
