--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="vendor/css/grid.css">
         <link rel="stylesheet" type="text/css" href="vendor/css/normalize.css">
-        <link href='https://fonts.googleapis.com/css?family=Lato:400,300,300italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
         <title>Omnifood</title>
     </head>
     <body>
-       <div class="row">
-            <h1>Omnifood</h1>
-       </div>
+       <header>
+           <nav>
+               <div class="row">
+                <img class="logo" src="logo/omnifood.png" alt="Omnifood Logo">
+                
+                <ul class="main-nav">
+                    <li><a href="#">Food delivery</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Our cities</a></li>
+                    <li><a href="#">Sign up</a></li>
+                    
+                </ul>
+               </div>
+           </nav>
+           <div class="hero-text-box">
+                <h1>Goodbye junk food.<br>Hello super healty meals.</h1>
+               <a class="btn btn-full" href="#">I'm hungry</a>
+               <a class="btn btn-ghost" href="#">Show me more</a>
+           </div>
+       </header>
     </body>
 </html>
